Applications/NSE-Body-Anayltics/base/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nse-body-analytics
  labels:
    reloader.stakater.com/reload: 'false'  # Enables reloader for this namespace
