Applications/NSE-Body-Anayltics/base/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nse-body-analytics
  labels:
    app.kubernetes.io/component: 'application'  # The component within the architecture
spec:
  revisionHistoryLimit: 3
  replicas: 0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/component: 'application'  # The component within the architecture
    spec:
      automountServiceAccountToken: false
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: nse-body-analytics-ghcr
      containers:
        - name: body-analytics
          image: ghcr.io/aessing/nse-body-analytics:0.0.0
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            runAsUser: 65532
            runAsGroup: 65532
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
            readOnlyRootFilesystem: true
          resources:
            requests:
              memory: 64Mi
              cpu: 0.01
            limits:
              memory: 128Mi
              cpu: 0.25
          ports:
            - containerPort: 4173
              protocol: TCP
              name: http
          startupProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
