Applications/NSE-Body-Anayltics/base/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nse-body-analytics
  labels:
    app.kubernetes.io/component: 'application'  # The component within the architecture
spec:
  selector:
    app.kubernetes.io/component: 'application'  # The component within the architecture
  ports:
    - protocol: TCP
      port: 4173
      targetPort: 4173
      name: http
  type: ClusterIP
